log
Thu 14 Sep 2023 11:17:22 AM UTC: 
 tests:  1|8
total_score: 0/70
e447c8f
Thu 14 Sep 2023 11:18:05 AM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
248e827
Thu 14 Sep 2023 11:22:20 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   63 |     return NULL;
      |            ^~~~
treemap.c:60:6: note: declared here
   60 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
843c1dc
Thu 14 Sep 2023 11:23:25 AM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:8: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   62 | return NULL;
      |        ^~~~
treemap.c:60:6: note: declared here
   60 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d9e62c4
Thu 14 Sep 2023 11:24:07 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cceO1jRm.o: in function `insert_test1':
test.c:(.text+0x757): undefined reference to `insertTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cceO1jRm.o: in function `insert_test2':
test.c:(.text+0x7e2): undefined reference to `insertTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
ae08189
Thu 14 Sep 2023 11:24:33 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   62 |   return 2;
      |          ^
treemap.c:60:6: note: declared here
   60 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a033fd5
Thu 14 Sep 2023 11:24:56 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
214d87b
Thu 14 Sep 2023 11:25:53 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
   93 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6c9d0fa
Thu 14 Sep 2023 11:29:47 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMapRecursive’:
treemap.c:95:20: error: ‘TreeNode’ has no member named ‘Pair’; did you mean ‘pair’?
   95 |     return node -> Pair;
      |                    ^~~~
      |                    pair
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e4fcd0c
Thu 14 Sep 2023 11:30:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMapRecursive’:
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4727c5b
Thu 14 Sep 2023 11:32:35 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|7
total_score: 5/70
c2bc1ab
Thu 14 Sep 2023 11:45:19 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:31: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   63 |   if (newNode == NULL) return NULL;
      |                               ^~~~
treemap.c:60:6: note: declared here
   60 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:68:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   68 |     return NULL;
      |            ^~~~
treemap.c:60:6: note: declared here
   60 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4337273
Thu 14 Sep 2023 11:49:04 AM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:13: error: unused variable ‘current’ [-Werror=unused-variable]
   64 |   TreeNode* current = NULL;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
93db1cf
Thu 14 Sep 2023 11:49:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
61fa8dc
Thu 14 Sep 2023 11:50:55 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:80:13: error: unused variable ‘currentChild’ [-Werror=unused-variable]
   80 |   TreeNode* currentChild = tree -> root;
      |             ^~~~~~~~~~~~
treemap.c:79:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   79 |   TreeNode* parent = NULL;
      |             ^~~~~~
treemap.c:64:13: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   64 |   TreeNode* current = NULL;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
822101c
Thu 14 Sep 2023 11:52:44 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   79 |   TreeNode* parent = NULL;
      |             ^~~~~~
treemap.c:64:13: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   64 |   TreeNode* current = NULL;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
41b7f27
